Fix optional/required input attributes
Signed-off-by: yottta <andreic9203@gmail.com>

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -5,11 +5,11 @@ on:
     inputs:
       build-pattern:
         default: './...'
-        optional: true
+        required: false
         type: string
       test-pattern:
         default: './...'
-        optional: true
+        required: false
         type: string
   push:
     branches:
