Do not run go checks if it's not a go project
Signed-off-by: yottta <andreic9203@gmail.com>

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -19,7 +19,8 @@ on:
       - main
 
 jobs:
-  build-and-test:
+  build-and-test-go:
+    if: ${{ hashFiles('go.mod') != '' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
