--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -8,7 +8,6 @@ on:
         required: false
         type: boolean
       go-build-pattern:
-        default: './...'
         required: false
         type: string
       go-test-pattern:
@@ -40,7 +39,9 @@ jobs:
         run: go mod download
 
       - name: Build Project
+        if: ${{ inputs.build-pattern != '' }}
         run: go build ${{ inputs.build-pattern }}
 
       - name: Run Tests
+        if: ${{ inputs.test-pattern != '' }}
         run: go test -v ${{ inputs.test-pattern }}
